Wed Jun 25 22:31:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (ruby_setenv): fix memory leak on Windows, free
	  environment strings block after check for the size.
	  [ruby-dev:48323] [Bug #9977]

Wed Jun 25 15:44:12 2014  Eric Wong  <e@80x24.org>

	* ccan/container_of/container_of.h (container_off_var):
	  avoid warning with -Wcast-qual
	  [ccan ba5ad771af4aa9e085498de6c3c665c52694460f (Rusty Russell)]

Wed Jun 25 10:19:59 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (env_aset, env_has_key, env_assoc, env_has_value),
	  (env_rassoc, env_key): prohibit tainted strings if $SAFE is
	  non-zero.  [Bug #9976]

Tue Jun 24 14:46:17 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/gserver.rb: remove redundant use of to_s in interpolation.
	* lib/logger.rb: ditto.
	* lib/optparse.rb: ditto.
	* lib/rbconfig/obsolete.rb: ditto.
	* lib/resolv.rb: ditto.
	* lib/webrick/httpresponse.rb: ditto.

Tue Jun 24 10:50:06 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (env_path_str_new): make PATH environment variable
	  string, to be frozen.

Tue Jun 24 10:40:52 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* tool/make-snapshot: download bundle gems when package making.
	  [Feature #9852][ruby-core:62676]
	* gems/bundled_gems: listed bundled gems for Ruby 2.2.

Tue Jun 24 10:20:35 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* tool/downloader.rb: make Downloader class to general download utility.
	  It can be used without config.guess and config.sub.
	* tool/get-config_files: ditto.
	* tool/make-snapshot: ditto.

Tue Jun 24 06:17:52 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* eval.c (setup_exception): "mesg == sysstack_error" and
	  sysstack_error_p(mesg) are duplicated.
	  r46502 seems to want to use latter.

Tue Jun 24 06:15:36 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tcltklib.c: fix format specifiers for VALUE and
	  Tcl_Interp*.  [ruby-core:63283] [Bug #9972]
